# echo

./: .cursorrules  .gitignore  ESTRUCTURA_PROYECTO.md  Makefile  PIPE_RECONNECT_FIX_i2b.md  QUICK_START.md  README.md  SCAFFOLDING_SUMMARY.md  build.sh  build_all.sh  go.work
.cursor/rules/: 000-core.mdc  002-arquitectura-modulos-independientes.mdc  050-observability-telemetry.mdc  110-configuracion-etcd.mdc  120-creacion-nuevos-modulos.mdc  business_entity_usage.mdc  code_conventions.mdc  context_management.mdc
agent/: README.md  go.mod  go.sum
agent/capabilities/: modification_dispatcher.go
agent/internal/: .gitkeep  ack_ledger.go  agent.go  config.go  core_client.go  delivery_manager.go  master_delivery_config.go  pipe_manager.go  pipe_manager_stub.go  stream.go  telemetry.go  time_windows.go  utils.go
clients/: README.md
clients/mt4/: .gitkeep  FIX-STACK-DAMAGED.md  JAson.mqh  Persistence.mqh  README.md  build_dll.bat  build_dll.sh  master.mq4  slave.mq4
clients/mt5/: .gitkeep
clients/ninja/: .gitkeep
core/: IMPLEMENTATION_SUMMARY.md  README.md  VALIDATION-PHASE-5.md  go.mod  go.sum
core/capabilities/: stop_level_guard.go
core/internal/: .gitkeep  account_registry.go  account_state_service.go  config.go  core.go  dedupe.go  dedupe_service.go  delivery_service.go  handshake_evaluator.go  handshake_evaluator_test.go  handshake_reconciler.go  handshake_registry.go  protocol_validator.go  risk_policy_service.go  risk_policy_service_test.go  router.go  router_offsets_test.go  router_test.go  stop_level_guard.go  symbol_quote_service.go  symbol_resolver.go  symbol_spec_service.go  symbol_validator.go
core/pkg/: .gitkeep
deploy/: .gitkeep
deploy/postgres/: README.md  setup.sql  teardown.sql
docs/: 00-contexto-general.md  01-arquitectura-y-roadmap.md  02-correcciones-arquitecturales.md  03-respuesta-a-correcciones.md  ANALISIS-PROBLEMAS-I2.md  ANALISIS-RECONEXION-EA.md  CORRECCION-URGENTE-i2b.md  GUIA-ACTIVAR-NUEVOS-SIMBOLOS.md  IMPLEMENTATION-i2b-PING-PONG.md  PRD-copiador-V1.md  RFC-001-architecture.md  RFC-004b-iteracion-3-parte-2-slave-autoregistro-simbolos.md  SOLUCION-PROBLEMAS-I2B.md  echo-agent-ea-integration-guide.md  roadmap-copiear-v1.md  trade-copier-context.md
docs/adr/: 001-monorepo.md  002-grpc-transport.md  003-named-pipes-ipc.md  004-postgres-state.md  005-etcd-config.md  README.md
docs/architecture/: .gitkeep
docs/diagrams/: .gitkeep
docs/ea/: MASTER_EA_i1_GUIDE.md  SLAVE_EA_i1_GUIDE.md
docs/reports/: i3-implementation-gap.md  i5-handshake-regresion.md
docs/rfcs/: .gitkeep  RFC-000-iteration-0-implementation.md  RFC-001-architecture.md  RFC-002-routing-selectivo.md  RFC-003-iteration-1-implementation.md  RFC-003-iteration-1-risks-and-issues.md  RFC-003b-iteracion-3-parte-final-slave-registro.md  RFC-004-APROBADO.md  RFC-004-iteracion-3-catalogo-simbolos.md  RFC-004-iteracion-4-especificaciones-broker.md  RFC-004c-REVISION-ARQUITECTONICA.md  RFC-004c-REVISION-FINAL.md  RFC-004c-VEREDICTO-FINAL.md  RFC-004c-respuesta-revision-final.md  RFC-004c-respuesta-revision.md  RFC-005-iteracion-5-handshake-versionado.md  RFC-006-iteracion-6-fixed-risk.md  RFC-architecture.md  VALIDATION-PHASE-2-SLAVE-EA.md  VALIDATION-PHASE-4-MASTER-EA.md
docs/runbooks/: .gitkeep  deploy_v3.md  escalation_prompt.md  specs.md
docs/templates/: rfc.md
ops/: fix_protocol_version.sh
pipe/: .gitignore  BUILD_REPORT.md  CHANGELOG.md  CMakeLists.txt  COMPONENT_SUMMARY.md  INSTALL.md  MQL4_USAGE_EXAMPLE.mq4  QUICK_REFERENCE.md  README.md  build.sh  echo_pipe.cpp  echo_pipe_x64.def  echo_pipe_x86.def  test_pipe.cpp  toolchain-mingw-x64.cmake  toolchain-mingw-x86.cmake
scripts/: cleanup_i1_critical_fixes.sql  normalize_uuids.sql
sdk/: README.md  go.mod  go.sum
sdk/contracts/: .gitkeep
sdk/domain/: .gitkeep  account_validation.go  adjustable_stops.go  delivery.go  doc.go  errors.go  models.go  repository.go  risk_calculator.go  risk_calculator_test.go  risk_policy.go  risk_policy_validator.go  risk_policy_validator_test.go  trade.go  transformers.go  validation.go  volume.go  volume_guard_policy.go  volume_test.go
sdk/etcd/: README.md  cache.go  cache_internal_test.go  cache_test.go  client.go  client_helpers_test.go  client_test.go  doc.go  echo_seed_test.go  etcd_middleware.go  etcd_middleware_test.go  example_test.go
sdk/grpc/: client.go  doc.go  interceptors.go  server.go  (+1 more)
test_e2e/: README.md  go.mod
tools/: .gitkeep
vibe-coding/: README.md  arquitecto-autor-task-prompt.md  echo_prompts_pack_v1.md
(+142 files in other folders)
